--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "fb",
   "version": "0.1.0",
   "private": true,
+  "description": "node app ",
+  "main": "app.js",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.14",
     "@fortawesome/free-solid-svg-icons": "^5.7.1",
@@ -25,6 +27,16 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "repository": {
+    "type": "git",
+    "url": ""
+    },
+    "author": "",
+"license": "ISC",
+"bugs": {
+"url": ""
+},
+"homepage": "",
   "eslintConfig": {
     "extends": "react-app"
   },
