--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "description": "node app ",
   "main": "app.js",
+  "proxy": "http://localhost:8082",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.14",
     "@fortawesome/free-solid-svg-icons": "^5.7.1",
@@ -15,6 +16,7 @@
     "npm": "^6.7.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-tooltip": "^3.9.2",
@@ -30,13 +32,13 @@
   "repository": {
     "type": "git",
     "url": ""
-    },
-    "author": "",
-"license": "ISC",
-"bugs": {
-"url": ""
-},
-"homepage": "",
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": ""
+  },
+  "homepage": "",
   "eslintConfig": {
     "extends": "react-app"
   },
